; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/executor/extr_multi_client_executor.c_AllocateConnectionId.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/executor/extr_multi_client_executor.c_AllocateConnectionId.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INVALID_CONNECTION_ID = common dso_local global i64 0, align 8
@MAX_CONNECTION_COUNT = common dso_local global i64 0, align 8
@ClientConnectionArray = common dso_local global i32** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @AllocateConnectionId to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @AllocateConnectionId() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = load i64, i64* @INVALID_CONNECTION_ID, align 8
  store i64 %4, i64* %1, align 8
  store i64 0, i64* %2, align 8
  store i64 0, i64* %2, align 8
  br label %5

5:                                                ; preds = %19, %0
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* @MAX_CONNECTION_COUNT, align 8
  %8 = icmp ult i64 %6, %7
  br i1 %8, label %9, label %22

9:                                                ; preds = %5
  %10 = load i32**, i32*** @ClientConnectionArray, align 8
  %11 = load i64, i64* %2, align 8
  %12 = getelementptr inbounds i32*, i32** %10, i64 %11
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %3, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %9
  %17 = load i64, i64* %2, align 8
  store i64 %17, i64* %1, align 8
  br label %22

18:                                               ; preds = %9
  br label %19

19:                                               ; preds = %18
  %20 = load i64, i64* %2, align 8
  %21 = add i64 %20, 1
  store i64 %21, i64* %2, align 8
  br label %5

22:                                               ; preds = %16, %5
  %23 = load i64, i64* %1, align 8
  ret i64 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
